[metadata]
name = neutron-portcheck
summary = OpenStack Networking Port Check Plugin
description-file =
    README.rst
author = Anton Kurbatov
author-email = bxfree@gmail.com
home-page = https://github.com/antonkurbatov/neutron-portcheck

[files]
packages =
    neutron_portcheck


[entry_points]
neutron.service_plugins =
    port_check = neutron_portcheck.services.port_check.plugin:PortCheckPlugin

neutron.agent.l2.extensions = 
    port_check = neutron_portcheck.agent.l2.extensions.port_check:PortCheckAgentExtension
